--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -16,8 +16,8 @@ block content
             h2 Login : 
             form(action='', method='post')
               .form-group
-                label(for='email') Email
-                input#email.form-control(type='text')
+                label(for='username') UserName
+                input#username.form-control(type='text')
               .form-group
                 label(for='password') Password
                 input#password.form-control(type='password')
