--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,9 @@ block content
     .slider
       #bg-slider.owl-carousel.owl-theme
         .item
-          img(src='assets/img/slide1/slider-image-1.jpg', alt='GTA V')
+          img(src='assets/img/slide1/harry-potter-slide.jpg', alt='Harry Potter')
         .item
-          img(src='assets/img/slide1/slider-image-2.jpg', alt='The Last of us')
-        .item
-          img(src='assets/img/slide1/slider-image-1.jpg', alt='GTA V')
+          img(src='assets/img/slide1/sherlock-holmes-slide.jpg', alt='Sherlock Holmes')
     .slider-content
       .row
         .col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1.col-sm-12
